# sidecar_http_dispatcher

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  TODO  TODO.md  _nginx.conf  app.py  app_test.py  codecov.yml  config.yaml  go.mod  go.sum  main.go  pyproject.toml  test_app.py
.github/workflows/: codecov.yaml  docker.yaml  docker_image.yml  dockerimage.yml  e2e_tests.yml  linters.yaml  unit_tests.yaml  workflow.yml
cmd/: main.go
example/: Makefile  deploy  deployment.yaml
example/base/: destination_app.yaml  enricher_app.yaml  kustomization.yaml
example/base/configMaps/: destination-nginx.conf  sidecar_config.yaml
example/configs/: index.html  nginx.conf  sidecar_config.yaml
example/k6test/: k6test.yaml  kustomization.yaml
example/k6test/configMaps/: k6script.js
example/local/: bare_enricher_app.yaml  destination_app_increase_limits.yaml  enricher_increase_limits.yaml  kustomization.yaml
example/local/configMaps/: bare-acme-nginx.conf
k6/: load.js
pkg/: config.go  config_test.go
pkg/config/: config.go  config_test.go
pkg/dispatcher/: dispatcher.go  dispatcher_test.go
pkg/utils/: utils.go  utils_test.go
sidecar_http_dispatcher/: __init__.py  app.py  config.py  test_app.py
